--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Linking CSS file -->
     <link rel="stylesheet" href="style.css">
     <!-- Title for TAB -->
+    <!-- ROBOTO font link -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <title>J Le Roux Web Developer</title>
 </head>
 
