--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <div id="logo">J Le Roux</div>
           <div id="navigation">
               <ul>
-                  <li>Home</li>
-                  <li>About</li>
-                  <li>Showcase</li>
-                  <li>Skills</li>
-                  <li>Contact</li>
+                  <a href="#home"><li>Home</li></a>
+                  <a href="#about"><li>About</li></a>
+                  <a href="#portfolio"><li>Portfolio</li></a>
+                  <a href="#skills"><li>Skills</li></a>
+                  <a href="#contact"><li>Contact</li></a>
 
               </ul>
           </div>  
