--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Linking CSS file -->
     <link rel="stylesheet" href="style.css">
-    <!-- Title for TAB -->
+    <!-- FONTAWESOME CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
     <!-- ROBOTO font link -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+    <!-- Title for TAB -->
     <title>J Le Roux Web Developer</title>
 </head>
 
@@ -18,7 +20,8 @@
     <header>
         <nav>
           <div id="logo">J Le Roux</div>
-          <div id="navigation">
+          <div class="hamIcon"><i class="fas fa-bars"></i></div>
+          <!-- <div id="navigation">
               <ul>
                   <a href="#home"><li>Home</li></a>
                   <a href="#about"><li>About</li></a>
@@ -27,7 +30,7 @@
                   <a href="#contact"><li>Contact</li></a>
 
               </ul>
-          </div>  
+          </div>   -->
         </nav>
     </header>
     <main>
