--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <!-- HEADER -->
     <header>
         <nav>
-          <div id="logo">J Le Roux</div>
-          <div class="hamIcon"><i class="fas fa-bars"></i></div>
-          <!-- <div id="navigation">
-              <ul>
-                  <a href="#home"><li>Home</li></a>
-                  <a href="#about"><li>About</li></a>
-                  <a href="#portfolio"><li>Portfolio</li></a>
-                  <a href="#skills"><li>Skills</li></a>
-                  <a href="#contact"><li>Contact</li></a>
-
-              </ul>
-          </div>   -->
+          <div id="logo">J LE ROUX</div>
+          <div class="hamIcon" onclick="openNav()"><i class="fas fa-bars"></i></div>  
         </nav>
     </header>
+    <div id="navigation">
+        <ul>
+            <a href="#home"><li>Home</li></a>
+            <a href="#about"><li>About</li></a>
+            <a href="#portfolio"><li>Portfolio</li></a>
+            <a href="#skills"><li>Skills</li></a>
+            <a href="#contact"><li>Contact</li></a>
+
+        </ul>
+    </div>
     <main>
         <section></section>
     </main>
