--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <!-- Linking CSS file -->
     <link rel="stylesheet" href="style.css">
     <!-- FONTAWESOME CDN -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+        integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
     <!-- ROBOTO font link -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <!-- Title for TAB -->
     <title>J Le Roux Web Developer</title>
 </head>
@@ -18,20 +19,37 @@
 <body>
     <!-- HEADER -->
     <header>
-        <nav>
-          <div id="logo">J LE ROUX</div>
-          <div class="hamIcon" onclick="openNav()"><i class="fas fa-bars"></i></div>  
+        <div id="logo">J LE ROUX</div>
+        <nav data-action="expand">
+                <div class="hamIcon"><i class="fas fa-bars"></i></div>
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Portfolio</a>
+                    <a href="#">Skills</a>
+                    <a href="#">Contact</a>
+                  </nav>
+
+            <!-- <div id="navigation">
+                <ul>
+                    <a href="#home">
+                        <li>Home</li>
+                    </a>
+                    <a href="#about">
+                        <li>About</li>
+                    </a>
+                    <a href="#portfolio">
+                        <li>Portfolio</li>
+                    </a>
+                    <a href="#skills">
+                        <li>Skills</li>
+                    </a>
+                    <a href="#contact">
+                        <li>Contact</li>
+                    </a>
+
+                </ul> -->
         </nav>
     </header>
-    <div id="navigation">
-        <ul>
-            <a href="#home"><li>Home</li></a>
-            <a href="#about"><li>About</li></a>
-            <a href="#portfolio"><li>Portfolio</li></a>
-            <a href="#skills"><li>Skills</li></a>
-            <a href="#contact"><li>Contact</li></a>
-
-        </ul>
     </div>
     <main>
         <section></section>
