Changes to Header

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div id="logo">J LE ROUX</div>
+        <a>
+            <div id="logo">J Le Roux</div>
+        </a>
         <nav data-action="expand">
-                <div class="hamIcon"><i class="fas fa-bars"></i></div>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Portfolio</a>
-                    <a href="#">Skills</a>
-                    <a href="#">Contact</a>
-                  </nav>
+            <i class="fas fa-bars"></i>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
 
-            <!-- <div id="navigation">
+        <!-- <div id="navigation">
                 <ul>
                     <a href="#home">
                         <li>Home</li>
@@ -48,11 +50,17 @@
                     </a>
 
                 </ul> -->
-        </nav>
+        <div class="overText">
+            <h1 class="overTextH1">Hi I'm Jovan.</h1>
+            <p class="overTextSmall"> I'm a South African freelancing Web Developer with a love for everything IT.</p>
+        </div>
     </header>
     </div>
     <main>
-        <section></section>
+        <section id="about" class="about">
+            <h1>About</h1>
+            <p>Hi I'm Jovan. I'm a South African freelancing Web Developer with a love for everything IT. </p>
+        </section>
     </main>
     <footer></footer>
     <!-- Javascript file -->
